Add lein-andient plugin and jvm-opts