@@ -15,5 +15,7 @@
   :main sqls.core
   :java-source-paths ["src"]
   :target-path "target/%s"
-  :plugins [[codox "0.6.6"]]
-  :profiles {:uberjar {:aot :all}})
+  :plugins [[codox "0.6.7"]
+            [lein-ancient "0.5.4"]]
+  :profiles {:uberjar {:aot :all}}
+  :jvm-opts ["-Xms4M" "-Xmx1G" "-XX:+PrintGC"])
